# CascadeRank-Audit

./: .flake8  .gitignore  INSTALLATION.md  LICENSE  README.md  SUBMISSION.md  YOUTUBE_UPLOAD.md  main.py  pyproject.toml  requirements.txt
cascaderank/: __init__.py  attack.py  audit.py  centrality.py  data.py  gnn.py  pipeline.py  report.py  verify.py
examples/bridge20/: edges.csv
plugins/cascaderank-audit/.codex-plugin/: plugin.json
plugins/cascaderank-audit/skills/cascaderank-audit/: SKILL.md
plugins/cascaderank-audit/skills/cascaderank-audit/agents/: openai.yaml
plugins/cascaderank-audit/skills/cascaderank-audit/references/: audit-protocol.md
plugins/cascaderank-audit/skills/cascaderank-audit/scripts/: run_audit.py  runtime.py  verify_audit.py
scripts/: build_demo_video.ps1  run_demo.ps1
tests/: test_attack.py  test_audit.py  test_centrality.py  test_data.py  test_gnn.py  test_pipeline.py  test_report.py
